# voter

./: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
.github/workflows/: rust.yml
benchmark/: bech.js
migrations/: V2__initial.sql  refinery.toml
proto/: voter.proto
src/: main.rs  poll.rs  user.rs  voterproto.rs
