[package]
name = "voter"
path = "src/main.rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tokio-postgres = "0.7.8"
tonic = "0.9.2"
prost = "0.11"
validator = { version = "0.15", features = ["derive"] }
bb8 = "0.8.1"
bb8-postgres = "0.8.1"

[build-dependencies]
tonic-build = "0.9.2"
